# zihan_helicon_conf

./: .gitignore  README.md
Python/: app.py  client.py  config.json  model_qwen.py  pyinstaller.txt  requirements-0808.txt  requirements.txt
Python/modules/: bgem3_module.py  camera_module.py  change_detector.py  meeting_manager.py  model_processor.py  ocr_module.py  rerank_module.py  roi_module.py  test.py  tokenlizer.py  utils_com.py  vdb_module.py
Python/nlp/: __init__bak.py  query.py  rag_tokenizer.py  search.py  surname.py  synonym.py  term_weight.py
Python/screen_segmentation/: README.md  dataset_prepare.py  evaluate.py  infer_test.py  screen.yaml  train.py
Python/screen_segmentation/dataset/labels/: train.cache  val.cache
Python/screen_segmentation/dataset/labels/test/: 00000.txt  00001_1_0.999_32.75061798095703_39.996761322021484.txt  00035.txt  00057.txt  00067.txt  00069.txt  00086.txt  00091.txt  00093.txt  00107.txt  00110.txt  00112.txt  00123.txt  00129.txt  00139.txt  00144.txt  00148_1_0.531_s_0.968.txt  00151.txt  00152.txt  00153.txt  00158_1_1.000_36.461238861083984_44.57404327392578.txt  output_iframe_0015_1_0.679_s_0.910.txt  output_iframe_0298_1_0.893_s_0.938.txt  output_iframe_0459_1_0.679_s_0.916.txt
Python/screen_segmentation/dataset/labels/val/: 00003.txt  00014.txt  00018.txt  00021.txt  00036.txt  00040.txt  00050.txt  00052.txt  00056.txt  00083.txt  00099.txt  00104_1_1.000_36.468475341796875_46.37247085571289.txt  00118.txt  00119.txt  00133.txt  00157.txt  00158.txt  00162.txt  00163_1_1.000_35.633853912353516_44.07741165161133.txt  00168.txt  output_iframe_0008_1_0.867_s_0.710.txt  output_iframe_0112_1_0.852_s_0.977.txt  output_iframe_0196_1_0.706_s_0.927.txt
Python/screen_segmentation/original_images/summary_ppt0708/labels/: output_iframe_0633_1_0.893_s_0.873.txt
Python/screen_segmentation/original_images/teams_0922/labels/: 00001.txt
Python/sessions/: 0d6e21a2-2f79-4fa9-ac25-ad7b17a0981c.json  317692b7-b778-4936-b00d-3a80ace56077.json  37dee72c-d015-4b75-aa71-3fc130bd15e6.json  4bc820de-ece9-4736-a6e9-745a89870db2.json  91d7d3bd-9c64-453d-98a5-72b2ca937771.json  9b67e5f1-a4de-44ea-b9fe-dfb7d9d1a7eb.json  c24c8da6-a306-4a7b-bd29-986933489c87.json  e4eeebc5-27ca-4a51-9a6f-1b34ca91d6b0.json  e9ec0b12-22c3-4268-aeb9-85da8e004733.json  f18da96e-cf9d-40b4-bfdd-70fd832ccd9f.json  f999392b-d384-4b89-a905-868b9438b0bb.json
Python/utils/: __init___bak.py  file_utils.py  model_viclip.py  utils_model.py  viclip.py  viclip_text.py  viclip_vision.py
cpp/: CMakeLists.txt
cpp/include/: HeliconSearchSDK.h
cpp/src/: CMakeLists.txt  sdk_main.cpp  sdk_main.h
cpp/src/meeting_manager/: MeetingManager.cpp  MeetingManager.h
cpp/src/modules/chineseclip/: ChineseCLIPProcessor.cpp  ChineseCLIPProcessor.h
cpp/src/modules/vlm/: VLMModule.cpp.bak  VLMProcessor.cpp  VLMProcessor.h
cpp/test/: CMakeLists.txt  SDKTest - Copy.cpp  SDKTest.cpp
